styles.css
.dropdown {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .9em;
    border: 1.5px solid;
    border-collapse: separate;
    border-radius: 5px;
}

h1 {
    font-family: 'Montserrat';
    font-weight: 900;
    font-size: 2em;
    line-height: 32px;
    text-align: left;
}

h2 {
    font-family: 'Montserrat';
    font-weight: 700;
    font-size: 2em;
    margin: 5px 0 3px 0;
    text-align: center;
}

h3 {
    font-family: 'Montserrat';
    font-weight: 700;
    font-size: 0.7em;
    line-height: 5px;
    padding: 5px 5px 5px 5px;
    text-align: left;
}

.header {
    position: absolute;
    background-color: white;
    opacity: 100%;
    width: 230px;
    z-index: 100;
    height: 180px;
    border-right: solid black;
}

#logo {
    position: absolute;
    height: 90px;
    padding: 10px 0 15px 15px;
}

#map {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
}

.mapboxgl-popup-content {
    padding: 5px;
    width: 400;
    border-radius: .5em;
    border: solid black 1.5px;
}

.mapboxgl-popup-content p{
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .8em;
}

.menu {
    position: absolute;
    background-color: white;
    left: 0;
    width: 230px;
    top: 180px;
    height: 400px;
    border-right: solid black;
}

#menu-top {
    height: 108px;
    padding: 0px 0px 5px 2px;
}

#menu-middle {
    height: 292px;
    padding: 0 10px 0 10px;
    border-bottom: solid black;
}

p {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: 0.7em;
    display: block;
    margin: 5px 0 5px 0;
    line-height: 15px;
}

.party-square {
    margin-left: 15px;
    width: 15px;
    height: 15px;
}

table.table1 {
    border-collapse: separate;
    border-radius: 5px;
    padding: 2px 2px 2px 2px;
    width: 100%;
}

table.table1 td {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .8em;
    text-align: center;
    white-space: nowrap;
}

table.table1 th {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .7em;
    text-align: center;
    border-bottom: 1.5px solid black;
}

table.table2 {
    width: 100%;
    height: 85%;
    table-layout: fixed;
}

table.table2 td {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .65em;
    height: 5%;
    text-align: center;
    padding: 5px 2px 5px 2px;
}

table.table2 th {
    font-family: 'Montserrat';
    font-weight: 300;
    font-size: .7em;
    height: 5%;
    text-align: center;
    padding: 5px 2px 5px 2px;
}

#title {
    padding-top: 80px;
    padding-left: 10px;
}

#welcome-message {
    display: None;
    width: 400px;
}

#welcome-message a {
    font-family: 'Montserrat';
    font-weight: 700;
}

